Major changes - and final submission
Signed-off-by: Scott Robarts <scott.robarts@blinkdesigns.ca>

--- a/WebContent/WEB-INF/classes/Message_de_DE.properties
+++ b/WebContent/WEB-INF/classes/Message_de_DE.properties
@@ -1,5 +1,13 @@
-page_title=aboooooot
-main.subhead=Sounds from the Global Village
-main.addLabel=Add
-main.qtyLabel=Quantity
-main.bgcolor=#33CCFF
+page_title=Ueber Uns
+header_text=Mammut Adressenbuch
+welcome=Willkommen zu dem Mammut Adressenbuch
+intro_sentence1=Dieses Program erlaubt Ihnen eine der Tabellen des Mammut Adressenbuch's zu veraendern.
+intro_sentence2=Klicken Sie and der Startseite (siehe unten) um Ergebnisse zu suchen order neue Information zuzufuegen.
+supported_ops=Die folgenden Operationen koennen im Moment ausgefuehrt werden:
+search=Akten Finden
+add=Akte Hinzufuegen
+update=Akte Aktualisieren
+delete=Akte Loeschen
+start_page=Start Seite
+about_page=Ueber Uns
+copyright=Urheberrecht
