--- a/WebContent/WEB-INF/classes/Message_en_CA.properties
+++ b/WebContent/WEB-INF/classes/Message_en_CA.properties
@@ -1,5 +1,13 @@
 page_title=About
-main.subhead=Sounds from the Global Village
-main.addLabel=Add
-main.qtyLabel=Quantity
-main.bgcolor=#33CCFF
+header_text=Mammoth Addressbook
+welcome=Welcome to the Mammoth Address Book!
+intro_sentence1=This application will allow you to manage one of the tables of the Mammoth Address Book (at least in this version).
+intro_sentence2=Click the Start Page link below to proceed with searching records or adding a record.
+supported_ops=The following operations are currently supported:
+search=Search Records
+add=Add Record
+update=Update Record
+delete=Delete Record
+start_page=Start
+about_page=About
+copyright=Copyright
